# dspatch

./: CMakeLists.txt  DSPatch.sln  README.txt
DSPatch/: DSPatch.vcproj
DSPatch/Include/: DSPatch.h
DSPatch/Source/: DspCircuit.cpp  DspCircuit.h  DspCircuitThread.cpp  DspCircuitThread.h  DspComponent.cpp  DspComponent.h  DspComponentThread.cpp  DspComponentThread.h  DspRunType.h  DspSafePointer.h  DspSignal.cpp  DspSignal.h  DspSignalBus.cpp  DspSignalBus.h  DspThread.h  DspThreadNull.h  DspThreadUnix.h  DspThreadWin.cpp  DspThreadWin.h  DspWire.h  DspWireBus.cpp  DspWireBus.h
Documentation/: Doxyfile
Documentation/html/: _d_s_patch_8h_source.html  _dsp_circuit_8h_source.html  _dsp_circuit_thread_8h_source.html  _dsp_component_8h_source.html  _dsp_component_thread_8h_source.html  _dsp_run_type_8h_source.html  _dsp_signal_8h_source.html  _dsp_signal_bus_8h_source.html  _dsp_thread_8h_source.html  _dsp_thread_null_8h_source.html  _dsp_wire_8h_source.html  _dsp_wire_bus_8h_source.html  annotated.html  files.html  (+29 more)
DspDemo/: DspDemo.sln
doc/: Doxyfile
example/: DspAdder.h  DspAudioDevice.h  DspGain.h  DspMp3Decoder.h  DspOscillator.cpp  DspOscillator.h  main (alt).cpp  main.cpp
include/: DSPatch.h
src/: DSPatch.cpp  DspCircuit.cpp  DspCircuit.h  DspCircuitThread.cpp  DspCircuitThread.h  DspComponent.cpp  DspComponent.h  DspComponentThread.cpp  DspComponentThread.h  DspRunType.h  DspSignal.cpp  DspSignal.h  DspSignalBus.cpp  DspSignalBus.h  DspThread.h  DspThreadNull.h  DspThreadUnix.h  DspThreadWin.h  DspWire.h  DspWireBus.cpp  DspWireBus.h
tutorial/: components.h  main.cpp
(+126 files in other folders)
